feat: Vistas signup y funcionalidad
